lab1/Test/L1-A-3-99.cmm
float W2DlX7vFZPd8gqzS [ 1824078740 ] , mVbN48ey , 
  JY6FkT3vKkEnCM ^


;
struct {
}U9k9j7C ( ) \{
}
@\'